--- a/assets/style.css
+++ b/assets/style.css
@@ -1,19 +1,35 @@
+body {
+    margin:0;
+    padding:0;
+}
+
 main {
    margin: 0;
   }
 .navhighscore {
     float: left;
 }
-.highscore {
+/* .highscore {
    
-}
+} */
 .inline {
     display: inline;
 }
 .timer-count {
 text-align: center;
 }
-
+ul {
+    margin: auto;
+    padding: 0;
+}
+li {
+    list-style-type: none;
+    padding: 5px;
+    background-color: black;
+    color: white;
+    margin-bottom: 30px;
+    font-size: 25px;
+}
 .quiz {
     display: flex;
     flex-wrap: wrap;
@@ -28,7 +44,7 @@ text-align: center;
   }
   h2 {
       font-size: 60px;
-      margin: 0;
+      
   }
   .timer-text {
     padding: 5px;
