--- a/assets/style.css
+++ b/assets/style.css
@@ -9,9 +9,7 @@ main {
 .navhighscore {
     float: left;
 }
-/* .highscore {
-   
-} */
+
 #feedback {
     text-align: center;
 }
@@ -72,4 +70,9 @@ button {
     transition-timing-function: linear;
     margin-top: 0.6em;
     align-self: center;
+  }
+  #initials{
+      display:none;
+      text-align: center;
+font-size: 30px;
   }
